// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list renders correctly 1`] = `
.c2 {
  margin: 16px;
}

.c3 {
  margin-top: 16px;
}

.c0 {
  padding: 16px;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  padding: 8px 0px 0px;
}

<div
  className="c0"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="c1"
  >
    <div>
      <h2
        className="c2"
      >
        Users
      </h2>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 2`] = `
.c4 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  margin: 0px;
}

.c6 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

.c2 {
  margin: 16px;
}

.c3 {
  margin-top: 16px;
}

.c0 {
  padding: 16px;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  padding: 8px 0px 0px;
}

<div
  className="c0"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="c1"
  >
    <div>
      <h2
        className="c2"
      >
        Users
      </h2>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            test
          </p>
        </div>
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            admin
          </p>
          <p
            className="c6"
          >
            admin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
